<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingEnd="50dp"
        android:paddingStart="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <com.dmitrymalkovich.android.ProgressFloatingActionButton
                    android:id="@+id/progressBarLayoutStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fingerprint_white_48dp" />

                    <ProgressBar
                        android:id="@+id/progressBarStatic"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="100"
                        android:progressDrawable="@drawable/progress" />

                </com.dmitrymalkovich.android.ProgressFloatingActionButton>

                <com.dmitrymalkovich.android.ProgressFloatingActionButton
                    android:id="@+id/progressBarLayoutIndeterminate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_fingerprint_white_48dp" />

                    <ProgressBar
                        android:id="@+id/progressBarIndeterminate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.dmitrymalkovich.android.ProgressFloatingActionButton>
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_device"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_rounded"
                android:text="@string/log_in"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </RelativeLayout>

</layout>
